# CrossTranscieverAPI

./: CMakeLists.txt  README.md
examples/: CFileRX.cpp  XCVRDemo.cpp
gr-xcvr/: CMakeLists.txt
gr-xcvr/cmake/Modules/: xcvrConfig.cmake
gr-xcvr/examples/: eshter_fft_example.grc
gr-xcvr/grc/: CMakeLists.txt  xcvr_eshter.xml
gr-xcvr/include/xcvr/: eshter.h
gr-xcvr/lib/: CMakeLists.txt  eshter_impl.cc  eshter_impl.h  qa_xcvr.cc
gr-xcvr/python/: __init__.py
include/: DeviceController.hpp  DeviceImp.hpp  Scheduler.hpp  SpectrumSensor.hpp  SpectrumSensorAsync.hpp  transceiver.hpp
src/: CFileRX.cpp  CMakeLists.txt  DeviceController.cpp  DeviceImp.cpp  Scheduler.cpp  SpectrumSensor.cpp  SpectrumSensorAsync.cpp
tests/: AllTests.cpp  CMakeLists.txt  DeviceControllerTests.cpp  DeviceImpTests.cpp  Main.cpp  OnLineTests.cpp  SchedulerTests.cpp  SpectrumSensorTests.cpp
xcvr-ImecSE-Scaldio-2b/: CMakeLists.txt  COPYING.txt  README.md  environment.sh  hardware.tgz  setup-Scaldio-2b.csh
xcvr-ImecSE-Scaldio-2b/examples/: CMakeLists.txt  imec-se-test.cpp
xcvr-ImecSE-Scaldio-2b/gr-xcvr/docs/doxygen/: Doxyfile.in
xcvr-ImecSE-Scaldio-2b/gr-xcvr/grc/: CMakeLists.txt  xcvr_ImecSensingEngine-Scaldio-2b.xml
xcvr-ImecSE-Scaldio-2b/gr-xcvr/include/xcvr/: CMakeLists.txt  api.h
xcvr-ImecSE-Scaldio-2b/gr-xcvr/lib/: CMakeLists.txt  ImecSensingEngine_impl.cc  ImecSensingEngine_impl.h  test_xcvr.cc
xcvr-ImecSE-Scaldio-2b/gr-xcvr/swig/: xcvr_swig.i
xcvr-ImecSE-Scaldio-2b/include/: ImecSE-Scaldio-2b.hpp  sensing.h  transceiver.hpp  types.h
xcvr-ImecSE-Scaldio-2b/src/: CMakeLists.txt  ImecSE-scaldio-2b.cpp
xcvr-ImecSE-WARP/: .gitignore  README.md  environment.sh  hardware.tgz  setupwarpfe.csh
xcvr-ImecSE-WARP/examples/: CMakeLists.txt  imec-se-test.cpp  psd_warplog.m
xcvr-ImecSE-WARP/gr-xcvr/: CMakeLists.txt
xcvr-ImecSE-WARP/gr-xcvr/docs/: README.xcvr
xcvr-ImecSE-WARP/gr-xcvr/grc/: CMakeLists.txt  xcvr_ImecSensingEngine.xml
xcvr-ImecSE-WARP/gr-xcvr/include/xcvr/: ImecSensingEngine.h
xcvr-ImecSE-WARP/gr-xcvr/lib/: CMakeLists.txt  ImecSensingEngine_impl.h
xcvr-ImecSE-WARP/gr-xcvr/python/: __init__.py
xcvr-ImecSE-WARP/gr-xcvr/swig/: CMakeLists.txt
xcvr-ImecSE-WARP/include/: ImecSE.hpp
xcvr-ImecSE-WARP/src/: CMakeLists.txt  ImecSE.cpp
xcvr-eshter/: .gitignore  CMakeLists.txt  README.md
xcvr-eshter/examples/: CMakeLists.txt
xcvr-eshter/gr-xcvr/docs/: README.xcvr
xcvr-eshter/gr-xcvr/docs/doxygen/: Doxyfile.in
xcvr-eshter/gr-xcvr/docs/doxygen/other/: group_defs.dox  main_page.dox
xcvr-eshter/gr-xcvr/include/xcvr/: CMakeLists.txt
xcvr-eshter/gr-xcvr/lib/: CMakeLists.txt  eshter_impl.cc  eshter_impl.h  qa_xcvr.h  test_xcvr.cc
xcvr-eshter/gr-xcvr/python/: CMakeLists.txt
xcvr-eshter/gr-xcvr/swig/: CMakeLists.txt  xcvr_swig.i
xcvr-eshter/src/: CMakeLists.txt  DeviceImp.cpp
xcvr-eshter/tests/: DeviceImpTests.cpp  SchedulerTests.cpp
